# live-reload

./: README.md  pyproject.toml
live_reload/: __main__.py
tests/: test_main.py
tests/assets/: test.html
